# gaeilge-sa-chonsol

./: .env.example  .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: string_suggestion.md
.github/workflows/: deploy-pages.yml  generate-status.yml  seed-supabase-strings.yml  sync-supabase-strings.yml  validate-translations.yml
cli/: __init__.py  config.py  main.py  strings.py  text.py  wad.py
cli/commands/: extract.py  init.py  mount.py  patch.py  release.py  status.py  validate.py  wad.py
cli/consoles/: __init__.py  ps1.py
cli/games/: __init__.py  registry.py
cli/games/ps1/: __init__.py  spyro1.py
ps1/spyro/1/: README.md
ps1/spyro/1/data/: strings.csv  strings.py
ps1/spyro/1/notes/: notes.md
ps1/spyro/1/scripts/: mount.sh  patch.py  wad_pack.py  wad_unpack.py
scripts/: backfill_translation_status.py  generate_status.py  seed_supabase_from_csv.py  sync_from_supabase.py  sync_game_notes.py  sync_github_labels.sh  validate_translations_pr.py
supabase/migrations/: 20260502113000_initial_schema.sql  20260502124500_suggestion_votes_and_policies.sql
web/: package-lock.json  package.json  svelte.config.js  vite.config.ts
web/src/: app.css  app.d.ts  app.html  hooks.server.ts
web/src/lib/: data.ts  game-notes.ts  session.ts  status-static.ts  supabase.ts  types.ts
web/src/lib/components/: ExternalLink.svelte  GameCard.svelte  ProgressBar.svelte  StatusBadge.svelte
web/src/routes/: +layout.svelte  +page.svelte  +page.ts
web/src/routes/contribute/: +page.svelte
web/src/routes/guide/: +page.md
web/static/: status.json
(+6 files in other folders)
