[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaeilge-sa-chonsol"
version = "0.1.0"
description = "CLI tools for Irish language retro game ROM hacking workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
gsc = "cli.main:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cli*"]
